# flight-pickup-reminder

./: .env.example  .env.mock  .gitignore  API_CREDENTIALS_GUIDE.md  LICENSE  MORNING_RUNBOOK.md  README.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/flight_pickup_reminder/: __init__.py  __main__.py  api.py  config.py  geo.py  location_proof.py  mcp_server.py  mcp_tools.py  mock.py  models.py  orchestrator.py  planning.py  proof.py  readiness.py  state.py  telegram_intake.py  time_utils.py
src/flight_pickup_reminder/providers/: flightaware.py  google_routes.py  telegram_gateway.py  twilio_gateway.py
tests/: conftest.py  test_mcp_tools.py  test_orchestrator.py  test_planning.py  test_proof.py  test_readiness.py  test_state.py  test_telegram_intake.py  test_twilio_gateway.py  test_utils.py
